# sherlock-core

./: .gitignore  Cargo.toml  README.md  pyproject.toml  sherlock.toml.DEFAULT
.github/workflows/: CI.yml
sherlock/: Cargo.toml  flake.nix  justfile
sherlock/docs/: messages.md
sherlock/helper-scripts/: message-enum-maker.py  message-type.txt
sherlock/src/: audio.rs  lib.rs  log.rs  voice.rs
sherlock/src/message_bus/: messages.rs  mod.rs
sherlock/src/utils/config/: intake.rs  mod.rs  websocket.rs
src/: lib.rs
