[package]
name = "sherlock"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.3"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
anyhow = "1.0.80"
chrono = "0.4.35"
colored = { version = "2.1.0", features = ["no-color"] }
fern = { version = "0.6.2", features = ["colored", "date-based"] }
log = { version = "0.4.21", features = ["release_max_level_trace", "max_level_trace"] }
simple_logger = "4.3.3"
